根据需求修改

--- a/src/containers/admin/style.less
+++ b/src/containers/admin/style.less
@@ -647,6 +647,11 @@
             &:hover {
                 transform: rotate(360deg);
             }
+
+            &.show {
+                right: 5%;
+                background-color: #1aad19;
+            }
         }
 
         .drop-list {
